code modified added more comments